Teach_Base Lesson13 Task01 Cleaning controllers and creating views for entities

--- a/railway_station/app/views/layouts/application.html.erb
+++ b/railway_station/app/views/layouts/application.html.erb
@@ -11,5 +11,9 @@
 
   <body>
     <%= yield %>
+    <div>
+      <p>(с) 2020 Havrysh Dmytro</p>
+      <%= link_to 'Home', welcome_index_path %>
+    </div>
   </body>
 </html>
