--- a/railway_station/app/views/train_stations/index.html.erb
+++ b/railway_station/app/views/train_stations/index.html.erb
@@ -11,14 +11,8 @@
   </thead>
 
   <tbody>
-    <% @train_stations.each do |train_station| %>
-      <tr>
-        <td><%= train_station.title %></td>
-        <td><%= link_to 'Show', train_station %></td>
-        <td><%= link_to 'Edit', edit_train_station_path(train_station) %></td>
-        <td><%= link_to 'Destroy', train_station, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+    <%= render @train_stations %>
+
   </tbody>
 </table>
 
