--- a/railway_station/app/views/trains/_form.html.erb
+++ b/railway_station/app/views/trains/_form.html.erb
@@ -1,19 +1,20 @@
 <%= form_with(model: train, local: true) do |form| %>
   <% if train.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(train.errors.count, "error") %> prohibited this train from being saved:</h2>
-
-      <ul>
-        <% train.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+  <%= render 'common/error', resource: train %>
   <% end %>
 
   <div class="field">
     <%= form.label :number %>
     <%= form.text_field :number %>
+  </div>
+  <div class="field">
+    <%= form.label :current_station, 'Current station' %>
+    <%= form.collection_select :current_station_id, TrainStation.all, :id, :title %>
+  </div>
+
+  <div class="field">
+    <%= form.label :route, 'Route' %>
+    <%= form.collection_select :route_id, Route.all, :id, :name %>
   </div>
 
   <div class="actions">
