--- a/railway_station/app/views/welcome/index.html.erb
+++ b/railway_station/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Okay, Let's start here!</h1>
-<%= link_to 'welcome', train_stations_path %>
+<%= link_to 'Train station', train_stations_path %>
+<%= link_to 'Trains', trains_path %>
+<%= link_to 'Routes', routes_path %>
