Teach_Base Lesson15 Task01 Create different carriage types(STI), add sorting carriages in train(Scope)

--- a/railway_station/app/views/carriages/index.html.erb
+++ b/railway_station/app/views/carriages/index.html.erb
@@ -6,17 +6,26 @@
   <thead>
   <tr>
     <th>Type</th>
+    <th>Train number</th>
     <th>Top places</th>
     <th>Bottom places</th>
+    <th>Side top places</th>
+    <th>Side bottom places</th>
+    <th>Seat places</th>
   </tr>
   </thead>
 
   <tbody>
   <% @carriages.each do |carriage| %>
     <tr>
-      <td><%= carriage.carriage_type %></td>
-      <td><%= carriage.top_places %></td>
-      <td><%= carriage.bottom_places %></td>
+      <td><%= carriage.type %></td>
+      <td><%= carriage.train.number %></td>
+      <td><%= carriage.top_places || 0 %></td>
+      <td><%= carriage.bottom_places || 0 %></td>
+      <td><%= carriage.side_top_places || 0 %></td>
+      <td><%= carriage.side_bottom_places || 0 %></td>
+      <td><%= carriage.seat_places || 0 %></td>
+      <% carriage = carriage.becomes(Carriage) %>
       <td><%= link_to 'Show', carriage %></td>
       <td><%= link_to 'Edit', edit_carriage_path(carriage) %></td>
       <td><%= link_to 'Destroy', carriage, method: :delete, data: { confirm: 'Are you sure?' } %></td>
