--- a/railway_station/app/views/carriages/_form.html.erb
+++ b/railway_station/app/views/carriages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: carriage, local: true) do |form| %>
+<%= form_for([@carriage.becomes(Carriage)]) do |form| %>
   <% if carriage.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(carriage.errors.count, "error") %> prohibited this carriage from being saved:</h2>
@@ -12,17 +12,29 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :carriage_type %>
-    <%= form.select(:carriage_type, options_for_select([['default'], ['comfortable']])) %>
+    <%= form.label :type %>
+    <%= form.select :type, Carriage::CARRIAGE_TYPES %>
   </div>
 
-  <div class="field">
+  <div class="field" id="top_places">
     <%= form.label :top_places %>
     <%= form.number_field :top_places %>
   </div>
-  <div class="field">
+  <div class="field" id="bottom_places">
     <%= form.label :bottom_places %>
     <%= form.number_field :bottom_places %>
+  </div>
+  <div class="field" id="side_top_places">
+    <%= form.label :side_top_places %>
+    <%= form.number_field :side_top_places %>
+  </div>
+  <div class="field" id="side_bottom_places">
+    <%= form.label :side_bottom_places %>
+    <%= form.number_field :side_bottom_places %>
+  </div>
+  <div class="field" id="seat_places">
+    <%= form.label :seat_places %>
+    <%= form.number_field :seat_places %>
   </div>
 
   <div class="field">
