--- a/railway_station/app/views/carriages/show.html.erb
+++ b/railway_station/app/views/carriages/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Type:</strong>
-  <%= @carriage.carriage_type %>
+  <%= @carriage.type %>
 </p>
 <p>
   <strong>Train:</strong>
@@ -10,12 +10,23 @@
 </p>
 <p>
   <strong>Top places:</strong>
-  <%= @carriage.top_places %>
+  <%= @carriage.top_places || 0 %>
 </p>
 <p>
   <strong>Bottom places:</strong>
-  <%= @carriage.bottom_places %>
+  <%= @carriage.bottom_places || 0 %>
+</p>
+<p>
+  <strong>Side top places:</strong>
+  <%= @carriage.side_top_places || 0 %>
+</p>
+<p>
+  <strong>Side bottom places:</strong>
+  <%= @carriage.side_bottom_places || 0 %>
+</p>
+<p>
+  <strong>Seat places:</strong>
+  <%= @carriage.seat_places || 0 %>
 </p>
 
-<%= link_to 'Edit', edit_carriage_path(@carriage) %> |
 <%= link_to 'Back', carriages_path %>
