--- a/railway_station/app/views/trains/_form.html.erb
+++ b/railway_station/app/views/trains/_form.html.erb
@@ -17,6 +17,11 @@
     <%= form.collection_select :route_id, Route.all, :id, :name %>
   </div>
 
+  <div class="field">
+    <%= form.label :sort, 'Carriages order' %>
+    <%= form.select :sort, options_for_select([['Head', 1], ['Tail', 0 ]]) %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
