--- a/railway_station/app/views/train_stations/show.html.erb
+++ b/railway_station/app/views/train_stations/show.html.erb
@@ -1,19 +1,22 @@
-<p id="notice"><%= notice %></p>
+<div class="half-w center">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @train_station.title %>
-</p>
-<% if @train_station.routes.empty? %>
-  <p>This station isn't included in any routes.</p>
-<% else %>
-  <p>List of routes, that include station:</p>
-  <ul>
-  <% @train_station.routes.each do |route| %>
-    <li><%= route.name %></li>
+  <p>
+    <strong>Title:</strong>
+    <%= @train_station.title %>
+  </p>
+  <% if @train_station.routes.empty? %>
+    <p>This station isn't included in any routes.</p>
+  <% else %>
+    <p>List of routes, that include station:</p>
+    <ul>
+      <% @train_station.routes.each do |route| %>
+        <li><%= route.name %></li>
+      <% end %>
+    </ul>
   <% end %>
-  </ul>
-<% end %>
 
-<%= link_to 'Edit', edit_train_station_path(@train_station) %> |
-<%= link_to 'Back', train_stations_path %>
+  <%= link_to 'Edit', edit_train_station_path(@train_station) %> |
+  <%= link_to 'Back', train_stations_path %>
+</div>
+
