--- a/railway_station/app/views/carriages/_form.html.erb
+++ b/railway_station/app/views/carriages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@carriage.becomes(Carriage)]) do |form| %>
+<%= form_for [@train, @carriage.becomes(Carriage)] do |form| %>
   <% if carriage.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(carriage.errors.count, "error") %> prohibited this carriage from being saved:</h2>
@@ -35,11 +35,6 @@
   <div class="field" id="seat_places">
     <%= form.label :seat_places %>
     <%= form.number_field :seat_places %>
-  </div>
-
-  <div class="field">
-    <%= form.label 'Train number:' %>
-    <%= form.collection_select :train_id, Train.all, :id, :number %>
   </div>
 
   <div class="actions">
