--- a/railway_station/app/views/layouts/application.html.erb
+++ b/railway_station/app/views/layouts/application.html.erb
@@ -10,10 +10,11 @@
   </head>
 
   <body>
+  <div class="main center">
     <%= yield %>
-    <div>
       <p>(с) 2020 Havrysh Dmytro</p>
       <%= link_to 'Home', welcome_index_path %>
-    </div>
+      <%= link_to 'Search', search_path %>
+  </div>
   </body>
 </html>
