--- a/railway_station/app/views/routes/index.html.erb
+++ b/railway_station/app/views/routes/index.html.erb
@@ -1,16 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class="half-w center">
+  <p id="notice"><%= notice %></p>
 
-<h1>Routes</h1>
+  <h1>Routes</h1>
 
-<table>
-  <thead>
+  <table class="center">
+    <thead>
     <tr>
       <th>Name</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @routes.each do |route| %>
       <tr>
         <td><%= route.name %></td>
@@ -19,9 +20,11 @@
         <td><%= link_to 'Destroy', route, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Route', new_route_path %>
+  <%= link_to 'New Route', new_route_path %>
+</div>
+
