--- a/railway_station/app/views/train_stations/index.html.erb
+++ b/railway_station/app/views/train_stations/index.html.erb
@@ -1,21 +1,24 @@
-<p id="notice"><%= notice %></p>
+<div class="half-w center">
+  <p id="notice"><%= notice %></p>
 
-<h1>Train Stations</h1>
+  <h1>Train Stations</h1>
 
-<table>
-  <thead>
+  <table class="center">
+    <thead>
     <tr>
       <th>Title</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <%= render @train_stations %>
 
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Train Station', new_train_station_path %>
+  <%= link_to 'New Train Station', new_train_station_path %>
+</div>
+
