--- a/railway_station/app/views/trains/edit.html.erb
+++ b/railway_station/app/views/trains/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Train</h1>
+<div class="half-w center">
+  <h1>Editing Train</h1>
 
-<%= render 'form', train: @train %>
+  <%= render 'form', train: @train %>
 
-<%= link_to 'Show', @train %> |
-<%= link_to 'Back', trains_path %>
+  <%= link_to 'Show', @train %> |
+  <%= link_to 'Back', trains_path %>
+</div>
+
