--- a/railway_station/app/views/trains/index.html.erb
+++ b/railway_station/app/views/trains/index.html.erb
@@ -1,20 +1,23 @@
-<p id="notice"><%= notice %></p>
+<div class="half-w center">
+  <p id="notice"><%= notice %></p>
 
-<h1>Trains</h1>
+  <h1>Trains</h1>
 
-<table>
-  <thead>
+  <table class="center">
+    <thead>
     <tr>
       <th>Number</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <%= render @trains %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Train', new_train_path %>
+  <%= link_to 'New Train', new_train_path %>
+</div>
+
