--- a/railway_station/app/views/admin/train_stations/new.html.erb
+++ b/railway_station/app/views/admin/train_stations/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', train_station: @train_station %>
 
-<%= link_to 'Back', train_stations_path %>
+<%= link_to 'Back', admin_train_stations_path %>
