--- a/railway_station/app/views/admin/routes/_form.html.erb
+++ b/railway_station/app/views/admin/routes/_form.html.erb
@@ -1,26 +1,18 @@
 <%= form_with(model: [:admin, route], local: true) do |form| %>
   <% if route.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(route.errors.count, "error") %> prohibited this route from being saved:</h2>
-
-      <ul>
-        <% route.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+    <%= render 'common/error' %>
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label t('.title') %>
     <%= form.text_field :name %>
   </div>
   <div class="field">
-    <%= form.label 'Train stations on this route:' %>
+    <%= form.label t('.stations_list') %>
     <%= form.collection_select :train_station_ids, TrainStation.all, :id, :title, {}, { multiple: true } %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit t('.submit', action: route.new_record? ? 'Создать' : 'Изменить') %>
   </div>
 <% end %>
