--- a/railway_station/app/views/admin/train_stations/new.html.erb
+++ b/railway_station/app/views/admin/train_stations/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Train Station</h1>
+<h1><%= t('.title') %></h1>
 
 <%= render 'form', train_station: @train_station %>
 
-<%= link_to 'Back', train_stations_path %>
+<%= link_to t('common.back'), admin_train_stations_path %>
