--- a/railway_station/app/views/admin/trains/_form.html.erb
+++ b/railway_station/app/views/admin/trains/_form.html.erb
@@ -4,25 +4,25 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :number %>
+    <%= form.label t('.number') %>
     <%= form.text_field :number %>
   </div>
   <div class="field">
-    <%= form.label :current_station, 'Current station' %>
+    <%= form.label t('.current_station') %>
     <%= form.collection_select :current_station_id, TrainStation.all, :id, :title %>
   </div>
 
   <div class="field">
-    <%= form.label :route, 'Route' %>
+    <%= form.label t('.route') %>
     <%= form.collection_select :route_id, Route.all, :id, :name %>
   </div>
 
   <div class="field">
-    <%= form.label :sort, 'Carriages order' %>
-    <%= form.select :sort, options_for_select([['Head', 1], ['Tail', 0 ]]) %>
+    <%= form.label t('.sort') %>
+    <%= form.select :sort, options_for_select([[t('.head'), 1], [t('.tail'), 0 ]]) %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit t('.submit', action: train.new_record? ? 'Создать' : 'Изменить') %>
   </div>
 <% end %>
