--- a/railway_station/app/views/admin/trains/edit.html.erb
+++ b/railway_station/app/views/admin/trains/edit.html.erb
@@ -1,9 +1,8 @@
 <div class="half-w center">
-  <h1>Editing Train</h1>
+  <h1><%= t('.title') %></h1>
 
   <%= render 'form', train: @train %>
 
-  <%= link_to 'Show', admin_trains_path(@train) %> |
-  <%= link_to 'Back', admin_trains_path %>
+  <%= link_to t('common.back'), admin_trains_path %>
 </div>
 
