--- a/railway_station/app/views/searches/show.html.erb
+++ b/railway_station/app/views/searches/show.html.erb
@@ -1,67 +1,54 @@
-<div class="search center half-w">
-  <h1>Search ticket</h1>
-  <%= form_tag search_path, method: :get do %>
-    <table class="center">
-      <thead>
-      <tr>
-        <td>
-          <%= label_tag :departure_station, 'From' %>
-        </td>
-        <td>
-          <%= label_tag :arrival_station, 'To' %>
-        </td>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>
-          <%= select_tag :departure_station, options_for_select(TrainStation.all.collect { |s| [s.title, s.id]}) %>
-        </td>
-        <td>
-          <%= select_tag :arrival_station, options_for_select(TrainStation.all.collect { |s| [s.title, s.id]}) %>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-    <%= submit_tag 'Search' %>
-  <% end %>
-    <% if @routes.size > 0 %>
-    <table class="center mt-30">
-      <thead>
-      <tr>
-        <td>
-          <b>Route</b>
-        </td>
-        <td>
-          <b>From</b>
-        </td>
-        <td>
-          <b>To</b>
-        </td>
-      </tr>
-      </thead>
-      <tbody>
-      <% @routes.each do |r| %>
-        <tr>
-          <td>
-            <%= r[:route].name %>
-          </td>
-          <td>
-            <%= r[:departure_station].title %><br>
-            <%= r[:departure_station].arrival_time_in(r[:route]) %>
-          </td>
-          <td>
-            <%= r[:arrival_station].title %><br>
-            <%= r[:arrival_station].departure_time_in(r[:route]) %>
-          </td>
-          <td>
-            <%= link_to 'View trains', trains_on_route_route_path(r[:route]) %>
-          </td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
-    <% else %>
-      <p>There is no route</p>
+<h1 class="text-center">Search ticket</h1>
+<%= form_tag search_path, method: :get do %>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <%= label_tag :departure_station, 'From' %>
+
+      <%= select_tag :departure_station, options_for_select(TrainStation.all.collect { |s| [s.title, s.id]}), {:class => 'form-control form-control-lg'} %>
+    </div>
+    <div class="form-group col-md-6">
+      <%= label_tag :arrival_station, 'To' %>
+      <%= select_tag :arrival_station, options_for_select(TrainStation.all.collect { |s| [s.title, s.id]}), {:class => 'form-control form-control-lg'} %>
+    </div>
+  </div>
+  <%= submit_tag 'Search', class: 'btn btn-primary' %>
+<% end %>
+
+<div class="row pt-4 routes-result">
+  <% if @routes.size > 0 %>
+    <div class="col-md-3">
+      <h3>Route</h3>
+    </div>
+    <div class="col-md-3">
+      <h3>From</h3>
+    </div>
+    <div class="col-md-3">
+      <h3>To</h3>
+    </div>
+    <div class="col-md-3">
+
+    </div>
+    <% count = 0 %>
+    <% @routes.each do |r| %>
+      <div class="col-md-3 align-items-center d-flex radius-left <%= 'light-blue' if count.even? %>">
+        <h6><%= r[:route].name %></h6>
+      </div>
+      <div class="col-md-3 <%= 'light-blue' if count.even? %>">
+        <p>
+          <%= r[:departure_station].title %><br>
+          <%= r[:departure_station].arrival_time_in(r[:route]) %>
+        </p>
+      </div>
+      <div class="col-md-3 <%= 'light-blue' if count.even? %>">
+        <p>
+          <%= r[:arrival_station].title %><br>
+          <%= r[:arrival_station].departure_time_in(r[:route]) %>
+        </p>
+      </div>
+      <div class="col-md-3 radius-right align-items-center d-flex <%= 'light-blue' if count.even? %>">
+        <%= link_to 'View trains', trains_on_route_route_path(r[:route]), class: 'btn btn-success' %>
+      </div>
+      <% count += 1 %>
     <% end %>
+  <% end %>
 </div>
