--- a/railway_station/app/views/tickets/show.html.erb
+++ b/railway_station/app/views/tickets/show.html.erb
@@ -1,11 +1,49 @@
-<div class="half-w center">
-  <h1>Ticket #<%= @ticket.id %></h1>
-  <p>First name: <%= @ticket.first_name %></p>
-  <p>Last name: <%= @ticket.last_name %></p>
-  <p>Train: <%= @ticket.train.number %></p>
-  <p>From: <%= @ticket.base_station.title %> - <%= @ticket.base_station.arrival_time_in(@ticket.train.route) %></p>
-  <p>To: <%= @ticket.end_station.title %> - <%= @ticket.end_station.departure_time_in(@ticket.train.route) %></p>
-  <%= link_to 'Delete ticket', ticket_path, method: :delete %>
-  <%= link_to 'Back to trains', trains_on_route_route_path(@ticket.train.route) %>
-  <%= link_to 'Buy another ticket', new_train_ticket_path(@ticket.train) %>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+    <div class="row">
+      <div class="col-12">
+        <h1 class="text-center">Ticket #<%= @ticket.id %></h1>
+      </div>
+      <div class="col-md-6">
+        <h4>First name: </h4>
+      </div>
+      <div class="col-md-6">
+        <p><%= @ticket.first_name %></p>
+      </div>
+      <div class="col-md-6">
+        <h4>Last name: </h4>
+      </div>
+      <div class="col-md-6">
+        <p><%= @ticket.last_name %></p>
+      </div>
+      <div class="col-md-6">
+        <h4>Train: </h4>
+      </div>
+      <div class="col-md-6">
+        <p><%= @ticket.train.number %></p>
+      </div>
+      <div class="col-md-6">
+        <h4>From: </h4>
+      </div>
+      <div class="col-md-6">
+        <p><%= @ticket.base_station.title %> - <%= @ticket.base_station.arrival_time_in(@ticket.train.route) %></p>
+      </div>
+      <div class="col-md-6">
+        <h4>To: </h4>
+      </div>
+      <div class="col-md-6">
+        <p><%= @ticket.end_station.title %> - <%= @ticket.end_station.departure_time_in(@ticket.train.route) %></p>
+      </div>
+      <div class="col-md-4 text-center">
+        <%= link_to 'Back to trains', trains_on_route_route_path(@ticket.train.route), class: 'btn btn-secondary' %>
+      </div>
+      <div class="col-md-4 text-center">
+        <%= link_to 'Delete ticket', ticket_path, method: :delete, class: 'btn btn-danger' %>
+      </div>
+      <div class="col-md-4 text-center">
+        <%= link_to 'Buy another', new_train_ticket_path(@ticket.train), class: 'btn btn-success' %>
+      </div>
+    </div>
+  </div>
+
 </div>
